workloads/discordbot/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: discordbot-service
  namespace: media
subsets:
  - addresses:
      - ip: 172.16.10.36
    ports:
      - port: 42069
