workloads/discordbot/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: discordbot-service
  namespace: media
spec:
  ports:
  - protocol: TCP
    port: 42069
    targetPort: 42069
  type: ClusterIP
